Fixes credit being hidden by scrollbar
Edited transformX, also now nicely aligns the credit text with the circular social media icons

--- a/static/new/css/footer.css
+++ b/static/new/css/footer.css
@@ -177,7 +177,8 @@
     }
 
 #credit {
-    transform: translate(-0.4vw, -11.4vw);
+    /* Prevents credit from being hidden by scrollbar */
+    transform: translate(-5.4vw, -11.4vw);
     float: right;
     font-size: 1vw;
     color: white;
